--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,041</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Group A</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14</td><td>Group A</td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Group B</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">66</td><td>Group B</td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">80</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">PractiseOfTestNg.DemoDataProvider</td><td><a href="#m0">checkData</a></td><td rowspan="2">1643640957068</td><td rowspan="2">14080</td></tr><tr class="passedeven"><td><a href="#m1">checkData</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Group B &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">PractiseOfTestNg.Groups</td><td><a href="#m0">testcase2</a></td><td rowspan="1">1643727917246</td><td rowspan="1">11</td></tr><tr class="passedeven"><td><a href="#m1">testcase3</a></td><td rowspan="1">1643727917264</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">PractiseOfTestNg.DemoDataProvider#checkData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>ggg</td><td>gdfdf</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">PractiseOfTestNg.DemoDataProvider#checkData</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>abc</td><td>fff</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Group A</h2><h2>Group B</h2><h3 id="m0">PractiseOfTestNg.Groups#testcase2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">PractiseOfTestNg.Groups#testcase3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
