--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>abc</td><td>GroupsDemo.loginData()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]<br/></td></tr>
+<tr><td>bbs</td><td>GroupsDemo.logOutData()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]<br/></td></tr>
+</table>
