--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,17 +51,17 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\SukhjeetKaur\eclipse-workspace\Test1\testng.xml</span>
+                    <span>C:\Users\SukhjeetKaur\eclipse-workspace\Test1\groupUnderGroups.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-Suite" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" panel-name="group-Suite" class="navigator-link ">
-                    <span>0 groups</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="PractiseOfTestNg.DemoDataProvider" class="method navigator-link" hash-for-method="checkData(ggg, gdfdf)">checkData(ggg, gdfdf)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="PractiseOfTestNg.Groups" class="method navigator-link" hash-for-method="testcase2">testcase2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="PractiseOfTestNg.DemoDataProvider" class="method navigator-link" hash-for-method="checkData(abc, fff)">checkData(abc, fff)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="PractiseOfTestNg.Groups" class="method navigator-link" hash-for-method="testcase3">testcase3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -127,23 +127,21 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">PractiseOfTestNg.DemoDataProvider</span>
+              <span class="class-name">PractiseOfTestNg.Groups</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="checkData(ggg, gdfdf)">
-                  </a> <!-- checkData(ggg, gdfdf) -->
-                  <span class="method-name">checkData</span>
-                  <span class="parameters">(ggg, gdfdf)</span>
+                  <a name="testcase2">
+                  </a> <!-- testcase2 -->
+                  <span class="method-name">testcase2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="checkData(abc, fff)">
-                  </a> <!-- checkData(abc, fff) -->
-                  <span class="method-name">checkData</span>
-                  <span class="parameters">(abc, fff)</span>
+                  <a name="testcase3">
+                  </a> <!-- testcase3 -->
+                  <span class="method-name">testcase3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -151,18 +149,30 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SukhjeetKaur\eclipse-workspace\Test1\testng.xml</span>
+            <span class="header-content">C:\Users\SukhjeetKaur\eclipse-workspace\Test1\groupUnderGroups.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Group A&quot;&gt;
+    &lt;groups&gt;
+      &lt;run&gt;
+        &lt;include name=&quot;Group A&quot;/&gt;
+      &lt;/run&gt;
+    &lt;/groups&gt;
+  &lt;/test&gt; &lt;!-- Group A --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Group B&quot;&gt;
+    &lt;groups&gt;
+      &lt;run&gt;
+        &lt;include name=&quot;Group B&quot;/&gt;
+      &lt;/run&gt;
+    &lt;/groups&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;PractiseOfTestNg.DemoDataProvider&quot;/&gt;
+      &lt;class name=&quot;PractiseOfTestNg.Groups&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- Group B --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -174,7 +184,10 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Group A (0 classes)</span>
+              </li>
+              <li>
+                <span class="test-name">Group B (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -184,6 +197,26 @@
             <span class="header-content">Groups for Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Group A</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">testcase2</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">Group B</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">testcase2</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">testcase3</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Suite" class="panel">
@@ -202,18 +235,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'checkData')
-data.setCell(0, 2, 'PractiseOfTestNg.DemoDataProvider')
-data.setCell(0, 3, 14898);
+data.setCell(0, 1, 'testcase2')
+data.setCell(0, 2, 'PractiseOfTestNg.Groups')
+data.setCell(0, 3, 11);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'checkData')
-data.setCell(1, 2, 'PractiseOfTestNg.DemoDataProvider')
-data.setCell(1, 3, 14080);
+data.setCell(1, 1, 'testcase3')
+data.setCell(1, 2, 'PractiseOfTestNg.Groups')
+data.setCell(1, 3, 2);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
+              <span class="suite-total-time">Total running time: 13 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -228,9 +261,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">PractiseOfTestNg.Groups</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">testcase1</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -239,14 +279,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">PractiseOfTestNg.DemoDataProvider</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">PractiseOfTestNg.Groups</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">checkData(abc, fff)</span>
+                <span class="method-name">testcase2</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">checkData(ggg, gdfdf)</span>
-                <span class="method-start">14904 ms</span>
+                <span class="method-name">testcase3</span>
+                <span class="method-start">18 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
