--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;JustCheckFollowOfAnnotation.afterClass()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;JustCheckFollowOfAnnotation.afterMethod()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>131</td> <td title="&lt;&lt;JustCheckFollowOfAnnotation.afterSuite()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;JustCheckFollowOfAnnotation.afterTest()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-32</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;JustCheckFollowOfAnnotation.beforeClass()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;JustCheckFollowOfAnnotation.beforeMethod()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-62</td> <td title="&gt;&gt;JustCheckFollowOfAnnotation.beforeSuite()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-53</td> <td>&nbsp;</td><td title="&gt;&gt;JustCheckFollowOfAnnotation.beforeTest()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1258084361</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 19:58:16</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="JustCheckFollowOfAnnotation.f()[pri:0, instance:PractiseOfTestNg.JustCheckFollowOfAnnotation@36bc55de]">f</td> 
-  <td>main@1258084361</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:24:03</td>   <td>0</td> <td title="&lt;&lt;GroupsDemo.closeDriver()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">&lt;&lt;closeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976870338</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:23:48</td>   <td>-15802</td> <td title="&gt;&gt;GroupsDemo.launchBrowser()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976870338</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:24:03</td>   <td>-166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.logOutData()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">logOutData</td> 
+  <td>main@1976870338</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:24:03</td>   <td>-149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.logOutData1()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">logOutData1</td> 
+  <td>main@1976870338</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:24:03</td>   <td>-188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.loginData()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">loginData</td> 
+  <td>main@1976870338</td>   <td></td> </tr>
+<tr bgcolor="79ec67">  <td>22/02/01 20:24:03</td>   <td>-172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.loginData1()[pri:0, instance:PractiseOfTestNg.GroupsDemo@35cabb2a]">loginData1</td> 
+  <td>main@1976870338</td>   <td></td> </tr>
 </table>
