--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Group A</td><td>Groups.testcase2()[pri:0, instance:PractiseOfTestNg.Groups@294425a7]<br/></td></tr>
+<tr><td>Group B</td><td>Groups.testcase2()[pri:0, instance:PractiseOfTestNg.Groups@294425a7]<br/>Groups.testcase3()[pri:0, instance:PractiseOfTestNg.Groups@294425a7]<br/></td></tr>
+</table>
