--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79ec67">  <td>22/01/31 20:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoDataProvider.checkData(java.lang.String,java.lang.String)[pri:0, instance:PractiseOfTestNg.DemoDataProvider@7fa98a66]">checkData</td> 
-  <td>main@996796369</td>   <td></td> </tr>
-<tr bgcolor="79ec67">  <td>22/01/31 20:25:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoDataProvider.checkData(java.lang.String,java.lang.String)[pri:0, instance:PractiseOfTestNg.DemoDataProvider@7fa98a66]">checkData</td> 
-  <td>main@996796369</td>   <td></td> </tr>
+<tr bgcolor="9368ac">  <td>22/02/01 20:35:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.testcase2()[pri:0, instance:PractiseOfTestNg.Groups@294425a7]">testcase2</td> 
+  <td>main@262457445</td>   <td></td> </tr>
+<tr bgcolor="9368ac">  <td>22/02/01 20:35:17</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Groups.testcase3()[pri:0, instance:PractiseOfTestNg.Groups@294425a7]">testcase3</td> 
+  <td>main@262457445</td>   <td></td> </tr>
 </table>
